fix: refactor tests that have not been measured (#62)